--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Fantastic 4 Search</title>
-<link rel="stylesheet" type="text/css" href="css/main.css" />
-<script type="text/javascript" src="js/main.js"></script> 
+<link rel="stylesheet" type="text/css" href="http://dl.dropbox.com/u/17783191/search/css/main.css" />
+<script type="text/javascript" src="http://dl.dropbox.com/u/17783191/search/js/main.js"></script> 
 </head>
 
 <body>
 <div id="main">
-    <img src="images/logo.png" alt="Fantastic Four" /><br />
+    <img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" /><br />
     <h1>Search</h1>
     <form id="mainsearch" method="post" action="/search">
         <input type="text" onclick="hideText(this)" value="Type here to search"/><br />
