--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" /><br />
     <h1>Search</h1>
     <form id="mainsearch" method="post" action="/search">
-        <input type="text" onclick="hideText(this)" value="Type here to search"/><br />
+        <input name="query" type="text" onclick="hideText(this)" value="Type here to search"/><br />
         <label for="number">Results</label>
         <select name="number">
             <option>1</option>
