--- a/web/header.html
+++ b/web/header.html
@@ -9,4 +9,7 @@
 
 <body>
 <div id="main">
-    <img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" /><br />
+    <div id="header">
+        <img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" />
+    </div>
+    <br />
