New things happened

--- a/web/header.html
+++ b/web/header.html
@@ -10,6 +10,6 @@
 <body>
 <div id="main">
     <div id="header">
-        <img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" />
+        <a href="http://deze.science.uva.nl:29003"><img src="http://dl.dropbox.com/u/17783191/search/images/logo.png" alt="Fantastic Four" /></a>
     </div>
     <br />
