--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
         <input name="query" type="text" onclick="hideText(this)" value="Type here to search"/><br />
         <label for="number">Results</label>
         <select name="number">
+            <option>All</option>
             <option>1</option>
             <option>10</option>                       
             <option>100</option>
